--- a/_layouts/site.html
+++ b/_layouts/site.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Skyline Technology Group</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="{{site.baseurl}}/css/styles.css">
 
 </head>
 <body>
@@ -21,11 +21,11 @@
             </label>
     <nav class="navigation main">
         <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/gallery/">Gallery</a></li>
-            <li><a href="/faq/">Faq</a></li>
-            <li><a href="/about/">About us</a></li>
-            <li><a href="/contacts/">Contacts</a></li>
+            <li><a href="{{ site.baseurl }}/">Home</a></li>
+            <li><a href="{{ site.baseurl }}/gallery/">Gallery</a></li>
+            <li><a href="{{ site.baseurl }}/faq/">Faq</a></li>
+            <li><a href="{{ site.baseurl }}/about/">About us</a></li>
+            <li><a href="{{ site.baseurl }}/contacts/">Contacts</a></li>
         </ul>
 
     </nav>
